--- a/quiz1/styles.css
+++ b/quiz1/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-color: #007BFF;
+    background-color: #ff0055;
     color: #fff;
     text-align: center;
     padding: 0;
@@ -26,6 +26,7 @@ header h1 {
 
     text-align: center;
     padding: 20px;
+    display: fl
 }
 
 footer {
@@ -39,7 +40,7 @@ footer {
     text-align: center;
     font-size: 30px;
     font-weight: bold;
-    color: #007BFF;
+    color: #ff0055;
 }
 
 #charinfo{
@@ -47,9 +48,15 @@ footer {
     margin-top: 30px;
     margin-bottom: 10px;
     font-weight: bold;
-    color: #007BFF;
+    color: #ff0055;
 }
 
 h2 {
     margin-top:10px;
+}
+
+a {
+    color: #ff0055;
+    font-size: 30px;
+    text-decoration: none;
 }
